# package_example

./: setup.cfg
