[metadata]
name = package_example
version = 0.0.1
author = Jesus Rojas
author_email = jora2415@gmailc.om
description = A simple Python package example
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/kamicase24
project_urls =
    Bug Tracker = https://gitlab.com/codasteroid/basicpkg/-/issues
    repository = https://gitlab.com/codasteroid/basicpkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src